tooling/tree-sitter-zen/test/corpus/async_calls.txt
===
async_calls
===
async fn load() -> Int { return 1; } fn main() -> Unit { let task: Task<Int> = load(); }

---

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (type_identifier
        (identifier)))
    (block
      (return_statement
        (integer_literal))))
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (type_identifier
        (identifier)))
    (block
      (let_statement
        (identifier)
        (named_type
          (type_identifier
            (identifier))
          (type_arguments
            (named_type
              (type_identifier
                (identifier)))))
        (call_expression
          (identifier_expression
            (identifier))
          (arguments))))))
