tooling/tree-sitter-zen/test/corpus/generic_interface.txt
===
generic_interface
===
interface Convert<T> { fn convert(self) -> T; } struct S {} impl Convert<Int> for S { fn convert(self) -> Int { return 1; } } fn f<U: Convert<Int>>(u: U) -> Int { return u.convert(); } fn main() -> Unit { let n = f(S {}); }

---

(source_file
  (interface_declaration
    (type_identifier
      (identifier))
    (generic_parameters
      (generic_parameter
        (type_identifier
          (identifier))))
    (interface_body
      (interface_method
        (identifier)
        (parameters
          (parameter))
        (named_type
          (type_identifier
            (identifier))))))
  (struct_declaration
    (type_identifier
      (identifier))
    (struct_body))
  (impl_declaration
    (named_type
      (type_identifier
        (identifier))
      (type_arguments
        (named_type
          (type_identifier
            (identifier)))))
    (named_type
      (type_identifier
        (identifier)))
    (impl_body
      (function_declaration
        (identifier)
        (parameters
          (parameter))
        (named_type
          (type_identifier
            (identifier)))
        (block
          (return_statement
            (integer_literal))))))
  (function_declaration
    (identifier)
    (generic_parameters
      (generic_parameter
        (type_identifier
          (identifier))
        (generic_constraint
          (named_type
            (type_identifier
              (identifier))
            (type_arguments
              (named_type
                (type_identifier
                  (identifier))))))))
    (parameters
      (parameter
        (identifier)
        (named_type
          (type_identifier
            (identifier)))))
    (named_type
      (type_identifier
        (identifier)))
    (block
      (return_statement
        (call_expression
          (member_expression
            (identifier_expression
              (identifier))
            (identifier))
          (arguments)))))
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (type_identifier
        (identifier)))
    (block
      (let_statement
        (identifier)
        (call_expression
          (identifier_expression
            (identifier))
          (arguments
            (struct_expression
              (named_type
                (type_identifier
                  (identifier)))
              (field_initializers))))))))
