tooling/tree-sitter-zen/test/corpus/generic_struct_inference.txt
===
generic_struct_inference
===
struct Box<T> { value: T; } fn main() -> Unit { let a = Box { value: 1 }; let b: Box<List<Int>> = Box { value: [] }; }

---

(source_file
  (struct_declaration
    (type_identifier
      (identifier))
    (generic_parameters
      (generic_parameter
        (type_identifier
          (identifier))))
    (struct_body
      (struct_field
        (identifier)
        (named_type
          (type_identifier
            (identifier))))))
  (function_declaration
    (identifier)
    (parameters)
    (named_type
      (type_identifier
        (identifier)))
    (block
      (let_statement
        (identifier)
        (struct_expression
          (named_type
            (type_identifier
              (identifier)))
          (field_initializers
            (field_initializer
              (identifier)
              (integer_literal)))))
      (let_statement
        (identifier)
        (named_type
          (type_identifier
            (identifier))
          (type_arguments
            (named_type
              (type_identifier
                (identifier))
              (type_arguments
                (named_type
                  (type_identifier
                    (identifier)))))))
        (struct_expression
          (named_type
            (type_identifier
              (identifier)))
          (field_initializers
            (field_initializer
              (identifier)
              (list_expression))))))))
